[gd_scene load_steps=19 format=4 uid="uid://wmqpwl0ls2ld"]

[ext_resource type="Script" path="res://scripts/master/game_controller.gd" id="1_nik7g"]
[ext_resource type="Script" path="res://scenes/cam_snap_area.gd" id="2_j5yu7"]
[ext_resource type="TileSet" uid="uid://c6omecsmeug1r" path="res://assets/palette/didi4/greenWorld.tres" id="2_jay0x"]
[ext_resource type="Script" path="res://scripts/master/dialogue_controller.gd" id="2_kpsbw"]
[ext_resource type="PackedScene" uid="uid://dx1sm1w4ew0fr" path="res://assets/puck_phys_generic.tscn" id="2_sas8h"]
[ext_resource type="Script" path="res://scripts/walls_controller.gd" id="4_6ygu3"]
[ext_resource type="Script" path="res://scripts/cursorMaker.gd" id="5_iymo7"]
[ext_resource type="PackedScene" uid="uid://clcgpntvvlo75" path="res://collectibles/scenes/shy_coin.tscn" id="6_p0glf"]
[ext_resource type="PackedScene" uid="uid://cw58sdkek0ria" path="res://collectibles/scenes/coin.tscn" id="7_ldeso"]
[ext_resource type="PackedScene" uid="uid://kldg6jp7vsw1" path="res://assets/player_puck.tscn" id="8_foios"]
[ext_resource type="PackedScene" uid="uid://b4y6vbhn3rhw2" path="res://UI/dialogue/dialogue_ui.tscn" id="9_1dtxa"]
[ext_resource type="PackedScene" uid="uid://bwq6gmw80mybm" path="res://UI/coin/coin_ui.tscn" id="9_fhtsm"]
[ext_resource type="JSON" path="res://dialogues/loveIntro.json" id="12_h5iw7"]
[ext_resource type="PackedScene" uid="uid://c8m21najiu1kp" path="res://UI/objective_ui.tscn" id="14_dvxii"]
[ext_resource type="Texture2D" uid="uid://bq1qxmnhrikwk" path="res://assets/palette/didi4/didi4_b.png" id="14_vak66"]
[ext_resource type="PackedScene" uid="uid://didk0ke4finlm" path="res://UI/screen_effects.tscn" id="16_x5x30"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iqynu"]
size = Vector2(1395, 645)

[sub_resource type="AtlasTexture" id="AtlasTexture_j83ua"]
atlas = ExtResource("14_vak66")
region = Rect2(417, 129, 14, 14)

[node name="World" type="Node2D"]
texture_filter = 1
script = ExtResource("1_nik7g")
winCondition = 1
time = 70

[node name="Triggers" type="Node2D" parent="."]

[node name="CamFocusArea" type="Area2D" parent="Triggers"]
position = Vector2(675, -630)
collision_layer = 128
collision_mask = 16
monitorable = false
script = ExtResource("2_j5yu7")
zoom = Vector2(0.8, 0.8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Triggers/CamFocusArea"]
position = Vector2(7.5, 0)
shape = SubResource("RectangleShape2D_iqynu")
debug_color = Color(0.776471, 0.384314, 0.568627, 0.254902)

[node name="CamFocusArea2" type="Area2D" parent="Triggers"]
position = Vector2(570, 990)
collision_layer = 128
collision_mask = 16
monitorable = false
script = ExtResource("2_j5yu7")
zoom = Vector2(1, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Triggers/CamFocusArea2"]
position = Vector2(7.5, 67.5)
shape = SubResource("RectangleShape2D_iqynu")
debug_color = Color(0.776471, 0.384314, 0.568627, 0.254902)

[node name="DialogueController" type="Node" parent="."]
script = ExtResource("2_kpsbw")

[node name="worldParticles" type="Node2D" parent="."]

[node name="Walls" type="TileMapLayer" parent="."]
scale = Vector2(4, 4)
tile_map_data = PackedByteArray("AAAAAAAAAAAAAAUAAAABAAAAAAAAAAUAAAACAAAAAAAAAAUAAAADAAAAAAAAAAUAAAAEAAAAAAAAAAUAAAAFAAAAAAAAAAUAAAAGAAAAAAAAAAUAAAALAAAAAAAAAAUAAAAMAAAAAAAIAAMAAAANAAAAAAAAAAUAAAAOAAAAAAAAAAUAAAAPAAAAAAAAAAUAAAAQAAAAAAAAAAUAAAARAAAAAAAAAAUAAAASAAAAAAAAAAUAAAAAAAEAAAAAAAUAAAAAAAIAAAAAAAUAAAAAAAMAAAAAAAUAAAAAAAQAAAAAAAUAAAAAAAUAAAAAAAUAAAAAAAYAAAAAAAUAAAAAAAcAAAAAAAUAAAAAAAgAAAAAAAUAAAAAAAkAAAAAAAUAAAAAAAoAAAAAAAUAAAABAAoAAAAAAAUAAAACAAoAAAAAAAUAAAADAAoAAAAAAAUAAAAEAAoAAAAAAAUAAAAFAAoAAAAAAAUAAAAGAAoAAAAAAAUAAAANAAoAAAAAAAUAAAAOAAoAAAAAAAUAAAAPAAoAAAAAAAUAAAAQAAoAAAAAAAUAAAARAAoAAAAAAAUAAAASAAoAAAAAAAUAAAASAAkAAAAAAAUAAAASAAgAAAAAAAUAAAASAAIAAAAAAAUAAAASAAEAAAAAAAUAAAASAAMAAAAAAAUAAAATAAMAAAAAAAUAAAAUAAMAAAAAAAUAAAAVAAMAAAAAAAUAAAAWAAMAAAAAAAUAAAAXAAMAAAAAAAUAAAAYAAMAAAAAAAUAAAAZAAMAAAAAAAUAAAASAAcAAAAAAAUAAAATAAcAAAAAAAUAAAAUAAcAAAAAAAUAAAAVAAcAAAAAAAUAAAAWAAcAAAAAAAUAAAAXAAcAAAAAAAUAAAAYAAcAAAAAAAUAAAAZAAcAAAAAAAUAAAAHAAAAAAAAAAUAAAAHAP//AAAEAAYAAAAHAP7/AAAEAAYAAAAHAP3/AAAEAAYAAAAHAPz/AAAEAAYAAAAKAAAAAAAAAAUAAAAKAP//AAAEAAYAAAAKAP7/AAAEAAYAAAAKAP3/AAAEAAYAAAAKAPz/AAAEAAYAAAAHAPv/AAADAAYAAAAGAPv/AAADAAYAAAAFAPv/AAADAAYAAAAEAPv/AAADAAYAAAADAPv/AAADAAYAAAACAPv/AAADAAYAAAABAPv/AAADAAYAAAAAAPv/AAADAAYAAAAAAPr/AAADAAYAAAAAAPn/AAADAAYAAAAAAPj/AAADAAYAAAAAAPf/AAADAAYAAAAAAPb/AAADAAYAAAAAAPX/AAADAAYAAAAAAPT/AAADAAYAAAAAAPP/AAADAAYAAAABAPP/AAADAAYAAAACAPP/AAADAAYAAAAHAPD/AAADAAYAAAAHAO//AAADAAYAAAAIAO//AAADAAYAAAAJAO//AAADAAYAAAAKAO//AAADAAYAAAALAO//AAADAAYAAAAMAO//AAADAAYAAAANAO//AAADAAYAAAAOAO//AAADAAYAAAAPAO7/AAADAAYAAAAQAO7/AAADAAYAAAARAO7/AAADAAYAAAASAO7/AAADAAYAAAATAO7/AAADAAYAAAAUAO7/AAADAAYAAAAVAO7/AAADAAYAAAAVAO//AAADAAYAAAAVAPD/AAADAAYAAAAVAPH/AAADAAYAAAAWAPL/AAADAAYAAAAWAPP/AAADAAYAAAAWAPT/AAADAAYAAAAWAPX/AAADAAYAAAAWAPb/AAADAAYAAAAVAPf/AAADAAYAAAAVAPj/AAADAAYAAAAUAPn/AAADAAYAAAAUAPr/AAADAAYAAAATAPv/AAADAAYAAAASAPv/AAADAAYAAAARAPv/AAADAAYAAAAQAPv/AAADAAYAAAAPAPv/AAADAAYAAAAOAPv/AAADAAYAAAANAPv/AAADAAYAAAAMAPv/AAADAAYAAAALAPv/AAADAAYAAAAKAPv/AAADAAYAAAAGAPD/AAADAAYAAAAFAPD/AAADAAYAAAAEAPH/AAADAAYAAAADAPH/AAADAAYAAAACAPL/AAADAAYAAAAEAPf/AAAGAAUAAAAOAPL/AAAGAAUAAAAQAPj/AAAGAAYAAAAKAPb/AAAGAAYAAAAHAPT/AAAGAAMAAAATAPH/AAAGAAMAAAAOAPb/AAAFAAUAAAAEAPT/AAAFAAUAAAACAPr/AAAFAAUAAAASAPr/AAAFAAYAAAALAPH/AAAFAAYAAAARAO//AAAFAAMAAAAUAPX/AAAGAAAAAAACAAEAAAAKAAEAAAACAAIAAAAKAAEAAAACAAMAAAAKAAIAAAABAAMAAAAJAAIAAAABAAIAAAAJAAEAAAABAAEAAAAJAAEAAAAOAAUAAAAIAAMAAAAOAAYAAAAIAAQAAAAOAAcAAAAIAAUAAAAMAAEAAAAIAAQAAAAMAAIAAAAIAAUAAAAFAAQAAAAIAAMAAAAFAAUAAAAIAAQAAAAFAAYAAAAIAAUAAAAIAAEAAAAYAAsAAAAJAAEAAAAYAAsAAAARAAUAAAAZAAsAAAAJAAkAAAAaAAsAAAAGAAsAAAAAAAUAAAAGAAwAAAAAAAUAAAAFAAwAAAAAAAUAAAAEAAwAAAAAAAUAAAADAAwAAAAAAAUAAAACAAwAAAAAAAUAAAABAAwAAAAAAAUAAAAAAAwAAAAAAAUAAAAAAA0AAAAAAAUAAAAAAA4AAAAAAAUAAAAAAA8AAAAAAAUAAAAAABAAAAAAAAUAAAAAABEAAAAAAAUAAAAAABIAAAAAAAUAAAAAABMAAAAAAAUAAAAAABQAAAAAAAUAAAABABQAAAAAAAUAAAACABQAAAAAAAUAAAADABQAAAAAAAUAAAAEABQAAAAAAAUAAAAFABQAAAAAAAUAAAAGABQAAAAAAAUAAAAHABQAAAAAAAUAAAAIABQAAAAAAAUAAAAJABQAAAAAAAUAAAAKABQAAAAAAAUAAAALABQAAAAAAAUAAAAMABQAAAAAAAUAAAANABQAAAAAAAUAAAAOABQAAAAAAAUAAAAPABQAAAAAAAUAAAAQABQAAAAAAAUAAAANAAwAAAAAAAUAAAAOAAwAAAAAAAUAAAAPAAwAAAAAAAUAAAAQAAwAAAAAAAUAAAARAAwAAAAAAAUAAAARABQAAAAAAAUAAAASAAwAAAAAAAUAAAASAA0AAAAAAAUAAAASAA4AAAAAAAUAAAASAA8AAAAAAAUAAAASABAAAAAAAAUAAAASABEAAAAAAAUAAAASABIAAAAAAAUAAAASABMAAAAAAAUAAAASABQAAAAAAAUAAAAMAAsAAAAAAAUAAAAMAAwAAAAAAAUAAAAMAAoAAAAAAAUAAAAaAAMAAAATAAUAAAAaAAIAAAATAAUAAAAaAAEAAAATAAUAAAAaAAAAAAATAAUAAAAaAAcAAAATAAUAAAAaAAgAAAATAAUAAAAaAAkAAAATAAUAAAAaAAoAAAATAAUAAAAaAAsAAAATAAUAAAAaAP//AAATAAUAAAAbAP//AAATAAUAAAAcAP//AAATAAUAAAAdAP//AAATAAUAAAAeAP//AAATAAUAAAAfAP//AAASAAMAAAAgAP//AAASAAMAAAAhAP//AAATAAUAAAAiAP//AAASAAMAAAAjAP//AAATAAUAAAAkAP//AAASAAMAAAAlAP//AAATAAUAAAAmAP//AAATAAUAAAAmAP7/AAASAAMAAAAmAP3/AAASAAMAAAAmAPz/AAASAAMAAAAmAPv/AAASAAMAAAAmAPr/AAATAAUAAAAmAPn/AAASAAMAAAAbAAsAAAATAAUAAAAcAAsAAAASAAMAAAAdAAsAAAASAAMAAAAeAAsAAAATAAUAAAAfAAsAAAASAAMAAAAgAAsAAAATAAUAAAAhAAsAAAATAAUAAAAiAAsAAAASAAMAAAAjAAsAAAASAAMAAAAkAAsAAAASAAMAAAAkAAwAAAATAAUAAAAkAA0AAAASAAMAAAAkAA4AAAATAAUAAAAkAA8AAAASAAMAAAAkABAAAAATAAUAAAAkABEAAAASAAMAAAAkABIAAAATAAUAAAAkABMAAAATAAUAAAAlABMAAAATAAUAAAAmABMAAAATAAUAAAAnABMAAAASAAMAAAAoABMAAAATAAUAAAApABMAAAATAAUAAAAqABMAAAATAAUAAAArABMAAAASAAMAAAAsABMAAAATAAUAAAAtABMAAAASAAMAAAAuABMAAAASAAMAAAAvABMAAAATAAUAAAAwABMAAAASAAMAAAAxABMAAAASAAMAAAAyABMAAAASAAMAAAAzABMAAAATAAUAAAAzABIAAAASAAMAAAAzABEAAAATAAUAAAAzABAAAAASAAMAAAAzAAsAAAATAAUAAAAzAAoAAAASAAMAAAAzAAkAAAASAAMAAAAzAAgAAAATAAUAAAAyAAgAAAATAAUAAAAxAAgAAAASAAMAAAAwAAgAAAATAAUAAAAvAAgAAAASAAMAAAAuAAgAAAATAAUAAAAtAAgAAAASAAMAAAAsAAgAAAASAAMAAAArAAgAAAATAAUAAAArAAcAAAATAAUAAAArAAYAAAATAAUAAAAsAAYAAAATAAUAAAAtAAYAAAASAAMAAAAuAAYAAAATAAUAAAAvAAYAAAATAAUAAAAwAAYAAAATAAUAAAAxAAYAAAATAAUAAAAyAAYAAAASAAMAAAAzAAYAAAASAAMAAAA0AAYAAAATAAUAAAA1AAYAAAASAAMAAAA2AAYAAAASAAMAAAA3AAYAAAASAAMAAAA4AAYAAAATAAUAAAA4AAcAAAASAAMAAAA4AAgAAAASAAMAAAA4AAkAAAASAAMAAAA4AAoAAAATAAUAAAA4AAsAAAATAAUAAAA3AAsAAAASAAMAAAA2AAsAAAATAAUAAAA1AAsAAAASAAMAAAA0AAsAAAATAAUAAAA0ABAAAAASAAMAAAA1ABAAAAASAAMAAAA2ABAAAAASAAMAAAA3ABAAAAASAAMAAAA4ABAAAAASAAMAAAA5ABAAAAATAAUAAAA5ABEAAAATAAUAAAA5ABIAAAASAAMAAAA5ABMAAAATAAUAAAA6ABMAAAATAAUAAAA7ABMAAAASAAMAAAA8ABMAAAASAAMAAAA9ABMAAAATAAUAAAA+ABMAAAATAAUAAAA/ABMAAAASAAMAAABAABMAAAATAAUAAABBABMAAAATAAUAAABCABMAAAATAAUAAABDABMAAAASAAMAAABEABMAAAATAAUAAABFABMAAAASAAMAAABGABMAAAATAAUAAABGABIAAAATAAUAAABGABEAAAATAAUAAABGABAAAAATAAUAAABGAA8AAAATAAUAAABGAA4AAAATAAUAAABGAA0AAAATAAUAAABGAAwAAAATAAUAAABGAAsAAAATAAUAAABGAAoAAAATAAUAAABGAAkAAAATAAUAAABHAAkAAAATAAUAAABIAAkAAAASAAMAAABJAAkAAAATAAUAAABKAAkAAAASAAMAAABLAAkAAAASAAMAAABMAAkAAAASAAMAAABNAAkAAAASAAMAAABOAAkAAAATAAUAAABPAAkAAAATAAUAAABQAAkAAAATAAUAAABRAAkAAAATAAUAAABRAAgAAAATAAUAAABRAAcAAAASAAMAAABRAAYAAAASAAMAAABRAAUAAAASAAMAAABRAAQAAAATAAUAAABRAAMAAAASAAMAAABRAAIAAAATAAUAAABRAAEAAAATAAUAAABRAAAAAAASAAMAAABRAP//AAASAAMAAABRAP7/AAASAAMAAABRAP3/AAASAAMAAABRAPz/AAASAAMAAABRAPv/AAATAAUAAABRAPr/AAATAAUAAABRAPn/AAATAAUAAABQAPn/AAATAAUAAABPAPn/AAASAAMAAABOAPn/AAASAAMAAABNAPn/AAATAAUAAABMAPn/AAATAAUAAABLAPn/AAATAAUAAABKAPn/AAATAAUAAABJAPn/AAASAAMAAABIAPn/AAATAAUAAABHAPn/AAATAAUAAABGAPn/AAATAAUAAABFAPn/AAATAAUAAABEAPn/AAATAAUAAABDAPn/AAASAAMAAABCAPn/AAATAAUAAABBAPn/AAASAAMAAABAAPn/AAASAAMAAAA/APn/AAASAAMAAAA+APn/AAATAAUAAAAmAPj/AAATAAUAAAAmAPf/AAATAAUAAAAmAPb/AAASAAMAAAAmAPX/AAASAAMAAAAmAPT/AAASAAMAAAAmAPP/AAATAAUAAAAmAPL/AAATAAUAAAAmAPH/AAASAAMAAAAmAPD/AAATAAUAAAAmAO//AAATAAUAAAAnAO//AAATAAUAAAAoAO//AAASAAMAAAApAO//AAASAAMAAAAqAO//AAATAAUAAAArAO//AAATAAUAAAAsAO//AAASAAMAAAAtAO//AAATAAUAAAAuAO//AAATAAUAAAAvAO//AAATAAUAAAAwAO//AAASAAMAAAAxAO//AAATAAUAAAAyAO//AAASAAMAAAAzAO//AAASAAMAAAA0AO//AAATAAUAAAA1AO//AAATAAUAAAA2AO//AAASAAMAAAA3AO//AAATAAUAAAA4AO//AAATAAUAAAA5AO//AAATAAUAAAA6AO//AAASAAMAAAA7AO//AAASAAMAAAA8AO//AAASAAMAAAA9AO//AAATAAUAAAA+AO//AAATAAUAAAA+APD/AAATAAUAAAA+APH/AAATAAUAAAA+APL/AAASAAMAAAA+APP/AAASAAMAAAA+APT/AAATAAUAAAA+APX/AAASAAMAAAA+APb/AAASAAMAAAA+APf/AAATAAUAAAA+APj/AAATAAUAAAAuAP7/AAASAAQAAAAvAP7/AAASAAQAAAAwAP7/AAASAAQAAAAxAP7/AAASAAQAAAAyAP7/AAASAAQAAAAzAP7/AAASAAQAAABAAAAAAAAAAAUAAABAAAEAAAAAAAUAAABAAAIAAAAAAAUAAABBAAAAAAAAAAUAAABBAAEAAAAAAAUAAABBAAIAAAAAAAUAAABCAAAAAAAAAAUAAABCAAEAAAAAAAUAAABCAAIAAAAAAAUAAABDAAAAAAAAAAUAAABDAAEAAAAAAAUAAABDAAIAAAAAAAUAAABEAAAAAAAAAAUAAABEAAEAAAAAAAUAAABEAAIAAAAAAAUAAABFAAAAAAAAAAUAAABFAAEAAAAAAAUAAABFAAIAAAAAAAUAAABGAAAAAAAAAAUAAABGAAEAAAAAAAUAAABGAAIAAAAAAAUAAABHAAAAAAAAAAUAAABHAAEAAAAAAAUAAABHAAIAAAAAAAUAAAA+AAAAAAAAAAUAAAA+AAEAAAAAAAUAAAA+AAIAAAAAAAUAAAA+AAMAAAAAAAUAAAA+AAQAAAAAAAUAAAA+AAUAAAAAAAUAAAA+AAYAAAAAAAUAAAA/AAAAAAAAAAUAAAA/AAEAAAAAAAUAAAA/AAIAAAAAAAUAAAA/AAMAAAAAAAUAAAA/AAQAAAAAAAUAAAA/AAUAAAAAAAUAAAA/AAYAAAAAAAUAAABAAAMAAAAQAAwAAAA6APD/AAAPAAwAAAA7APD/AAAQAAwAAAA8APD/AAARAAwAAAA9APD/AAASAAwAAAAbAAEAAAAQAAwAAAAcAAEAAAASAAwAAAAdAAEAAAAQAAwAAAAeAAEAAAAQAAwAAAAfAAEAAAARAAwAAAAgAAEAAAAQAAwAAAAhAAEAAAAQAAwAAAAiAAEAAAAPAAwAABBBAAMAAAAQAAwAAABCAAMAAAAQAAwAAABDAAMAAAARAAwAAABEAAMAAAAQAAwAAABFAAMAAAAPAAwAABAHAAwAAAAAAAUAAAALAAwAAAAAAAUAAAARAAkAAAARAAcAAAABAAkAAAATAAcAAAAHAAsAAAATAAcAAAALAAsAAAARAAcAAAA=")
tile_set = ExtResource("2_jay0x")

[node name="Breakable" type="TileMapLayer" parent="."]
scale = Vector2(4, 4)
tile_map_data = PackedByteArray("AAAUAAQAAAAFAAwAAAAUAAUAAAAFAAwAAAAUAAYAAAAFAAwAAAAIAAwAAAAFAAwAAAAJAAwAAAAFAAwAAAAKAAwAAAAFAAwAAAAGAPn/AAAHAAcAAAAMAPn/AAAHAAcAAAAIAPX/AAAHAAcAAAAQAPH/AAAHAAcAAAAUAPf/AAAHAAcAAAAbAAoAAAAHAAcAAAAfAAIAAAAHAAcAAAApAAcAAAAHAAcAAAAyAAkAAAAHAAcAAAA6ABIAAAAHAAcAAAA5AAkAAAAHAAcAAABFABIAAAAHAAcAAABIAAIAAAAHAAcAAAA9AAAAAAAHAAcAAAA9APn/AAAHAAcAAAA0AAAAAAAHAAcAAABOAP7/AAAHAAcAAAA3APP/AAAHAAcAAAAnAPD/AAAHAAcAAAAsAPz/AAAHAAcAAAAQAAIAAAAYABIAAAACAAgAAAAYABIAAABAAAQAAAAHABAAAAALAAcAAAAKABQAAAAFAAMAAAAYABIAAAAeAAUAAAAYABIAAAAqAAEAAAAYABIAAAALABEAAAAYABIAAAALAA8AAAAYABIAAAAHAA8AAAAYABIAAAAHABEAAAAYABIAAAAPABEAAAAYABIAAAAPAA8AAAAYABIAAAADAA8AAAAYABIAAAADABEAAAAYABIAAAA=")
tile_set = ExtResource("2_jay0x")
script = ExtResource("4_6ygu3")

[node name="CursorHolder" type="Node2D" parent="."]
script = ExtResource("5_iymo7")

[node name="PlayerPuck" parent="." instance=ExtResource("8_foios")]
position = Vector2(585, 330)

[node name="CoinHolder" type="Node2D" parent="."]

[node name="Coin" parent="CoinHolder" instance=ExtResource("7_ldeso")]
position = Vector2(270, 990)

[node name="Coin2" parent="CoinHolder" instance=ExtResource("7_ldeso")]
position = Vector2(390, 990)

[node name="Coin3" parent="CoinHolder" instance=ExtResource("7_ldeso")]
position = Vector2(510, 990)

[node name="Coin4" parent="CoinHolder" instance=ExtResource("7_ldeso")]
position = Vector2(630, 990)

[node name="Coin5" parent="CoinHolder" instance=ExtResource("7_ldeso")]
position = Vector2(750, 990)

[node name="Coin6" parent="CoinHolder" instance=ExtResource("7_ldeso")]
position = Vector2(870, 990)

[node name="Coin13" parent="CoinHolder" instance=ExtResource("7_ldeso")]
position = Vector2(270, 870)

[node name="Coin14" parent="CoinHolder" instance=ExtResource("7_ldeso")]
position = Vector2(390, 870)

[node name="Coin15" parent="CoinHolder" instance=ExtResource("7_ldeso")]
position = Vector2(510, 870)

[node name="Coin16" parent="CoinHolder" instance=ExtResource("7_ldeso")]
position = Vector2(630, 870)

[node name="Coin17" parent="CoinHolder" instance=ExtResource("7_ldeso")]
position = Vector2(750, 870)

[node name="Coin18" parent="CoinHolder" instance=ExtResource("7_ldeso")]
position = Vector2(870, 870)

[node name="Coin7" parent="CoinHolder" instance=ExtResource("7_ldeso")]
position = Vector2(270, 1110)

[node name="Coin8" parent="CoinHolder" instance=ExtResource("7_ldeso")]
position = Vector2(390, 1110)

[node name="Coin9" parent="CoinHolder" instance=ExtResource("7_ldeso")]
position = Vector2(510, 1110)

[node name="Coin10" parent="CoinHolder" instance=ExtResource("7_ldeso")]
position = Vector2(630, 1110)

[node name="Coin11" parent="CoinHolder" instance=ExtResource("7_ldeso")]
position = Vector2(750, 1110)

[node name="Coin12" parent="CoinHolder" instance=ExtResource("7_ldeso")]
position = Vector2(870, 1110)

[node name="Coin19" parent="CoinHolder" instance=ExtResource("7_ldeso")]
position = Vector2(540, -240)

[node name="Coin20" parent="CoinHolder" instance=ExtResource("7_ldeso")]
position = Vector2(540, -75)

[node name="Coin21" parent="CoinHolder" instance=ExtResource("7_ldeso")]
position = Vector2(1155, 330)

[node name="ShyCoin" parent="CoinHolder" instance=ExtResource("6_p0glf")]
position = Vector2(1470, 330)

[node name="ShyCoin2" parent="CoinHolder" instance=ExtResource("6_p0glf")]
position = Vector2(2880, -240)

[node name="ShyCoin3" parent="CoinHolder" instance=ExtResource("6_p0glf")]
position = Vector2(3928, 272)

[node name="PhysPuck" parent="CoinHolder" instance=ExtResource("2_sas8h")]
position = Vector2(480, -480)

[node name="PhysPuck2" parent="CoinHolder" instance=ExtResource("2_sas8h")]
position = Vector2(720, -720)

[node name="PhysPuck3" parent="CoinHolder" instance=ExtResource("2_sas8h")]
position = Vector2(960, -600)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="DialogueUI" parent="CanvasLayer" instance=ExtResource("9_1dtxa")]
dialogue_json = ExtResource("12_h5iw7")

[node name="CoinUI" parent="CanvasLayer" instance=ExtResource("9_fhtsm")]

[node name="ObjectiveUI" parent="CanvasLayer" instance=ExtResource("14_dvxii")]

[node name="crosshair" type="Sprite2D" parent="CanvasLayer"]
visible = false
position = Vector2(645, 360)
texture = SubResource("AtlasTexture_j83ua")

[node name="ScreenEffects" parent="CanvasLayer" instance=ExtResource("16_x5x30")]

[connection signal="body_entered" from="Triggers/CamFocusArea" to="Triggers/CamFocusArea" method="_on_body_entered"]
[connection signal="body_exited" from="Triggers/CamFocusArea" to="Triggers/CamFocusArea" method="_on_body_exited"]
[connection signal="body_entered" from="Triggers/CamFocusArea2" to="Triggers/CamFocusArea2" method="_on_body_entered"]
[connection signal="body_exited" from="Triggers/CamFocusArea2" to="Triggers/CamFocusArea2" method="_on_body_exited"]
